# freezer-tempest-plugin

./: .coveragerc  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/contributor/: contributing.rst
freezer_tempest_plugin/: README.rst  clients.py  common.py  config.py  plugin.py
freezer_tempest_plugin/services/: freezer_api_client.py
freezer_tempest_plugin/tests/api/: test_backup_compress.py  test_fs_backup.py  test_metadata_checksum.py  test_swift_backup.py  test_tests_running.py
freezer_tempest_plugin/tests/freezer/agent/: base.py  test_backup_compress.py  test_fs_backup.py  test_metadata_checksum.py  test_swift_backup.py  test_tests_running.py
freezer_tempest_plugin/tests/freezer/api/: test_backup_compress.py  test_fs_backup.py  test_metadata_checksum.py  test_swift_backup.py  test_tests_running.py
freezer_tempest_plugin/tests/freezer/scenario/: test_backups.py
freezer_tempest_plugin/tests/freezer_api/api/: base.py  test_api_actions.py  test_api_backups.py  test_api_central.py  test_api_clients.py  test_api_jobs.py  test_api_sessions.py  test_api_version.py
freezer_tempest_plugin/tests/freezerclient/: base.py  test_freezer_cmd_action.py  test_freezer_cmd_backup.py  test_freezer_cmd_client.py  test_freezer_cmd_job.py  test_freezer_cmd_session.py
freezer_tempest_plugin/tests/scenario/: test_backups.py
freezer_tempest_plugin/tests/scheduler/: base.py  test_freezer_scheduler.py
releasenotes/notes/: drop-py-2-7-b64b230b4ad22d82.yaml
releasenotes/source/: conf.py  index.rst
