[metadata]
name = freezer_tempest_plugin
summary = Tempest plugin for the freezer project.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/tempest/latest/plugin-registry.html
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    freezer_tempest_plugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = freezer_tempest_plugin/locale
domain = freezer_tempest_plugin

[update_catalog]
domain = freezer_tempest_plugin
output_dir = freezer_tempest_plugin/locale
input_file = freezer_tempest_plugin/locale/freezer_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = freezer_tempest_plugin/locale/freezer_tempest_plugin.pot

[entry_points]
tempest.test_plugins =
    freezer_tests = freezer_tempest_plugin.plugin:FreezerTempestPlugin
