[metadata]
name = freezer_tempest_plugin
summary = Tempest plugin for the freezer project.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/tempest/latest/plugin-registry.html
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    freezer_tempest_plugin

[entry_points]
tempest.test_plugins =
    freezer_tests = freezer_tempest_plugin.plugin:FreezerTempestPlugin
